[package]
name = "try_wayland"
version = "0.1.0"
authors = ["guy <guy123levinger@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wayland-client="0.12.5"
wayland-protocols="0.12.5"
wayland-window="0.13.3"
byteorder="1.3.2"
tempfile="3.1.0"
